--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Testing for integration with Pivital Tracker works",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
   "repository": {
